@@ -28,8 +28,8 @@ install:
 	install -m644 lib/Fai.pm $(DESTDIR)/usr/lib/perl5/Debian
 	cd conf ; install -m644 $(CONFFILES) $(LIBDIR)/etc/
 	install -m644 conf/fai.conf $(DESTDIR)/etc
-	cp -a utils examples $(DESTDIR)/$(DOCDIR)
-	cp -a templates $(DESTDIR)/usr/share/fai
+	cp -a examples $(DESTDIR)/$(DOCDIR)
+	cp -a utils templates $(DESTDIR)/usr/share/fai
 	perl -pi -e 's/_KERNELVERSION_/$(KERNELVERSION)/' $(KVERSION_FILES)
 	perl -pi -e 's/FAIVERSIONSTRING/$(VERSIONSTRING)/' $(LIBDIR)/sbin/rcS_fai
 	ln -fs installimage_3com $(DESTDIR)/boot/fai/bigfoot
